--- a/src/app/buy/buy.component.html
+++ b/src/app/buy/buy.component.html
@@ -40,7 +40,7 @@
         </div>
         <ul class="features">
             <li><strong>NO Watermark</strong></li>
-            <li><strong>Version 1 Users will be granfathered in at $4.00 monthly or $44 annually forever</strong></li>
+            <li><strong>Version 1.0.* Users will be grandfathered in at the current price always.</strong></li>
             <li>Desktop app for Mac/Windows</li>
             <li>Audio-Responsive visuals</li>
             <li>Real-Time beat detection</li>
