--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -1,12 +1,11 @@
 <div class="content-wrapper">
-    <h1 class="center">How It Works</h1>
-    <div class="clearfix"></div>
+    <div class="content-inner-wrapper">
+        <h1 class="center">Learn How It Works</h1>
 
-    <div>
-        <img src="../../assets/images/help.jpg" style="width: 100%;" />
-    </div>
+        <div>
+            <img src="../../assets/images/help.jpg" style="width: 100%;" />
+        </div>
 
-    <div style="width: 800px; margin:40px auto;">
 
         <h2>Crash Course:</h2>
 
