--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -11,9 +11,9 @@
         <img src='../../assets/images/macbook.png' class='macbook' />
 
     </div>
-    <div class='' style="width: 400px; margin: 60px auto 40px;">
+    <div class='content-inner-wrapper'>
 
-        <h3>Features</h3>
+        <h3 class="center">Features</h3>
         <ul>
             <li>Desktop app for Mac/Windows.</li>
             <li>Audio-Responsive visuals.</li>
@@ -37,6 +37,11 @@
     </div>
     <div class='clearfix'></div>
 </div>
+
+<header>
+    <button mat-button routerLink="/book" style="display:block; width: 200px; margin: 20px auto; color: #fff !important; font-size: 18px;">BOOK A DEMO</button>
+</header>
+
 <div class="content-wrapper dark">
     <iframe src="https://www.youtube.com/embed/zb4jutWN_6M?rel=0&amp;controls=0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -46,7 +51,7 @@
     <h2>How It Works</h2>
 </header>
 <div class="content-wrapper">
-    <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; margin:0px auto;">
+    <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; max-width:300px; margin:0px auto;">
 </div>
 
 <header>
