--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -1,11 +1,11 @@
 <div class="content-wrapper">
-    <h1 class="center">Support</h1>
-    <h2>VISUALZ v1.0.0</h2>
-    <div class="clearfix"></div>
+    <div class="content-inner-wrapper">
+        <h1 class="">Community</h1>
+        <h2>VISUALZ v1.0.0</h2>
+        <div class="clearfix"></div>
 
-    <div>
         <div style="margin-bottom: 20px;">
-            <p>Welcome to VISUALZ support. Please add any questions, comments, or feedback to the thread below.</p>
+            <p>Welcome to VISUALZ support community. Please add any questions, comments, or feedback to the thread below.</p>
         </div>
         <div id="disqus_thread"></div>
 
