--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,26 @@ body {
     color: #333;
 }
 
+h1 {
+    margin-bottom: 40px;
+}
+
+h2 {
+    margin-bottom: 30px;
+    margin-top: 30px;
+} 
+
+h3 {
+    margin-bottom: 20px;
+    margin-top: 30px;
+    text-align: left;
+}
+
+p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 .pink {
     background-color: #e91e63;
     color: #fff;
@@ -43,6 +63,16 @@ body {
     }
 }
 
+.center {
+    text-align: center;
+}
+
+.content-inner-wrapper {
+    max-width: 800px;
+    margin: 0px auto;
+    display: block;
+}
+
 .content-wrapper {
     padding: 40px;
     background-color: #fff;
@@ -61,9 +91,7 @@ body {
 
     }
 
-    h3 {
-        text-align: center;
-    }
+
 
     ul {
         li {
@@ -75,7 +103,7 @@ body {
         background-color: #333 !important;
         
         iframe {
-            width: 477px;
+            max-width: 477px;
             height: 298px;
             position: relative;
             display: block;
@@ -138,19 +166,22 @@ header {
 
     .nav {
         float: right;
+
         div {
-            color: #cccccc;
-            font-size: 12px;
-            width: 300px;
-            margin-top: 10px;
+            //color: #cccccc;
+            //font-size: 12px;
+            //width: 300px;
+            //margin-top: 10px;
 
         }
-        a {
+        a, button {
             color: #fff;
-            display: inline-block;
-            text-decoration: none;
-            font-size: 12px;
-            margin-right: 30px;
+            //display: inline-block;
+            //text-decoration: none;
+            //font-size: 14px;
+            //margin: 10px 0px 0px 0px;
+            //padding: 20px;
+
         }
     }
 
