--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
     <a routerLink="https://www.instagram.com/visualzapp/">Instagram</a>
     -->
     <br>
-    &copy; VISUALZ Copyright 2019. All Rights Reserved.
+    &copy; VISUALZ 1.0.0 Copyright 2019. All Rights Reserved.
     <br>
     Created By: karl.steltenpohl [at] gmail.com
 </footer>
