--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,8 +103,8 @@ p {
         background-color: #333 !important;
         
         iframe {
-            max-width: 477px;
-            height: 298px;
+            width: 100%;
+            height: 500px;
             position: relative;
             display: block;
             margin: 40px auto 20px;
@@ -139,7 +139,7 @@ p {
 footer{
     color: #ccc;
     text-align: center;
-    padding: 20px;
+    padding: 20px 20px 20px 20px;
     font-size: 10px;
     line-height: 20px;
 
