--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ p {
 
 .wrapper {
     min-height: 500px;
-    background: url(assets/images/blackwhite.jpg);
+    background: url(assets/images/main.gif);
     background-size: cover;
     //height: 100%;
     //width: 100%;
