remote que clean up

--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -1,3 +1,4 @@
-<p>
-  fan-screen works!
-</p>
+<div class="preview-wrapper">
+    <div class="loading-sketch" [hidden]="!sketchLoading"></div>
+    <div id="preview" class="preview-window"></div>
+</div>
