--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -1,4 +1,3 @@
-<div class="preview-wrapper">
-    <div class="loading-sketch" [hidden]="!sketchLoading"></div>
-    <div id="preview" class="preview-window"></div>
+<div class="main-wrapper">
+    <div class="crowd-preview" [ngStyle]="{'background-color':crowdScreenBackgroundColor}"></div>
 </div>
