web socket, fan screen output, and remote que fix

--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -1,3 +1,7 @@
 <div class="main-wrapper">
-    <div class="crowd-preview" [ngStyle]="{'background-color':crowdScreenBackgroundColor}"></div>
+    <div class="crowd-preview" [ngStyle]="{'background-color':crowdScreenBackgroundColor}">
+
+        {{camera}}
+
+    </div>
 </div>
