--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -3,5 +3,7 @@
 
         {{msg}}
 
+        <zxing-scanner [torch]="torch" [torchCompatible]="torchCompatible"></zxing-scanner>
+
     </div>
 </div>
