--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -3,7 +3,7 @@
 
         {{msg}}
 
-        <zxing-scanner [torch]="torch" [torchCompatible]="torchCompatible"></zxing-scanner>
+        <zxing-scanner [torch]="torch"></zxing-scanner>
 
     </div>
 </div>
