--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -1,7 +1,7 @@
 <div class="main-wrapper">
     <div class="crowd-preview" [ngStyle]="{'background-color':crowdScreenBackgroundColor}">
-
-        {{msg}}
-
+        <video width="1" height="1" loop="loop" autoplay style="position: absolute; top: 0px; left: -10px;">
+            <source src="https://muvievideos.s3.us-east-2.amazonaws.com/SampleVideo_1280x720_2mb.mp4_1.mp4" type="video/mp4">
+        </video>
     </div>
 </div>
