--- a/src/app/fan-screen/fan-screen.component.scss
+++ b/src/app/fan-screen/fan-screen.component.scss
@@ -21,3 +21,11 @@
 body, html {
     height: 100vh;
 }
+
+.timer {
+    font-size: 50px;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    top: 40vh
+}
