--- a/src/app/fan-screen/fan-screen.component.scss
+++ b/src/app/fan-screen/fan-screen.component.scss
@@ -23,9 +23,10 @@ body, html {
 }
 
 .timer {
-    font-size: 50px;
+    font-size: 70px;
     color: #fff;
     text-align: center;
     position: absolute;
-    top: 40vh
+    top: 40vh;
+    width: 100%;
 }
