--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,9 @@
         <!--<a routerLink="/filter">Filter</a>-->
 
         <button mat-button routerLink="/">HOME</button>
+        <!-- <button mat-button routerLink="/about">ABOUT</button> -->
         <button mat-button routerLink="/download">DOWNLOAD FREE</button>
-        <button mat-button routerLink="/prices">PRICES</button>
+        <!-- <button mat-button routerLink="/prices">PRICES</button> -->
 
         <!--
         <a routerLink="/support">SUPPORT</a>
@@ -19,7 +20,8 @@
             <button mat-menu-item routerLink="/how-it-works">LEARN</button>
             <button mat-menu-item routerLink="/resources">RESOURCES</button>
             <button mat-menu-item routerLink="/support">COMMUNITY</button>
-            <button mat-menu-item routerLink="/book">BOOK DEMO</button>
+            <!-- <button mat-menu-item routerLink="/contact">CONTACT</button> -->
+            <!--<button mat-menu-item routerLink="/book">BOOK DEMO</button>-->
         </mat-menu>
     </div>
     <div class="clearfix"></div>
@@ -28,7 +30,6 @@
 <router-outlet></router-outlet>
 
 <footer *ngIf="!interactive">
-
     <a routerLink="/support">Support</a> |
     <a routerLink="/how-it-works">How It Works</a> |
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> |
@@ -41,7 +42,7 @@
     <a routerLink="https://www.instagram.com/visualzapp/">Instagram</a>
     -->
     <br>
-    &copy; VISUALZ 1.0.0 Copyright 2019. All Rights Reserved.
+    &copy; VISUALZ 1.2.0 Copyright 2019. All Rights Reserved.
     <br>
     Created By: karl.steltenpohl [at] gmail.com
 </footer>
