--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
-<div class="content-wrapper">
-    <h1 class="center">Download For<br>Windows or Mac</h1>
-    <h2>VISUALZ v1.0.0</h2>
+<div class="content-wrapper normal">
+    <h1 class="center">Download VISUALZ v1.1.0 for<br>Windows or Mac</h1>
+    <h2>VISUALZ v1.2.0 download available soon.</h2>
     <div class="clearfix"></div>
     <div class="bordered">
 
