--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -1,9 +1,9 @@
-<div class="content-wrapper">
+<div class="content-wrapper normal">
     <div class="content-inner-wrapper">
         <h1 class="center">Learn How It Works</h1>
 
         <div>
-            <img src="../../assets/images/help.jpg" style="width: 100%;" />
+            <img src="../../assets/images/help.jpg" class="rounded" style="width: 100%;" />
         </div>
 
 
