--- a/src/app/download/download.component.scss
+++ b/src/app/download/download.component.scss
@@ -14,7 +14,7 @@ a.button {
     color: #ffffff !important;
 }
 .bordered {
-    border: 1px solid #999;
+    border: 1px #999 dashed;
     border-radius: 3px;
     padding: 20px 20px 0px 20px;
     display: block;
@@ -22,31 +22,27 @@ a.button {
     margin: 20px auto;
     text-align:center;
 
+    color: #fff;
+
+    a {
+        color: #999;
+    }
+
 }
 
 .center {
     text-align: center;
 }
 
-h1 {
-    font-size: 48px;
-    margin-top: 40px;
-    margin-bottom: 80px;
-    line-height: 54px;
-}
-
-h2 {
-    text-align: center;
-}
-
 mat-grid-tile {
     div {
         text-align: center;
-    
+        color: #fff; 
+
         a {
             display: block;
             width: 300px;
-            color: #333;
+            color: #fff;
             text-decoration: none;
             margin: 0px auto 40px auto;
 
