--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -1,6 +1,6 @@
-<div class="content-wrapper">
+<div class="content-wrapper normal">
   <div class="content-inner-wrapper">
-    <h1 class="">Resources</h1>
+    <h1 class="center">Resources</h1>
 
     <h2>Where To Find Video Loops</h2>
 
@@ -10,20 +10,20 @@
 
     <ul>
       <li><a href="https://www.beeple-crap.com/vjloops">Beeple Crap</a></li>
-      <li><a href="https://docoptic.com/free/">DocOptic</a></li>    
-      <li><a href="https://giphy.com/">Giphy</a></li>    
+      <li><a href="https://docoptic.com/free/">DocOptic</a></li>
+      <li><a href="https://giphy.com/">Giphy</a></li>
     </ul>
 
     <h3>Giphy</h3>
 
     <p>
-      Giphy is an amazing resource. The VISUALZ team has always held a special place 
-      in its heart for Giphy even before we existed. VISUALZ comes with a built-in Giphy 
+      Giphy is an amazing resource. The VISUALZ team has always held a special place
+      in its heart for Giphy even before we existed. VISUALZ comes with a built-in Giphy
       content feature.
     </p>
 
     <h2>How To Do Live Visuals</h2>
-    
+
     <p>
       What you will need:
     </p>
@@ -40,15 +40,19 @@
 
     <ul>
       <li>Projector screen</li>
-      <li><a href="https://www.google.com/search?ei=ozIlXYuVLoWltQaclJHICg&q=portable+power+station&oq=portable+power+station&gs_l=psy-ab.3..0l10.1037484.1041500..1042097...0.0..3.693.6667.0j11j2j2j4j3....2..0....1..gws-wiz.......0i71j0i131j0i67j0i273.mZnCJ9faEWY">Portable power station</a></li>
+      <li><a
+          href="https://www.google.com/search?ei=ozIlXYuVLoWltQaclJHICg&q=portable+power+station&oq=portable+power+station&gs_l=psy-ab.3..0l10.1037484.1041500..1042097...0.0..3.693.6667.0j11j2j2j4j3....2..0....1..gws-wiz.......0i71j0i131j0i67j0i273.mZnCJ9faEWY">Portable
+          power station</a></li>
     </ul>
 
     <p>
-      Once you have your gear your ready. Creating a track or a set is easy in VISUALZ. Checkout the <a routerLink="/how-it-works">Learn Page</a> to see how to do it. But trust me it's very simple.
+      Once you have your gear your ready. Creating a track or a set is easy in VISUALZ. Checkout the <a
+        routerLink="/how-it-works">Learn Page</a> to see how to do it. But trust me it's very simple.
     </p>
 
     <p>
-      When you are done composing your set in VISUALZ. Push the play button, and then the fullscreen button. You're doing it.
+      When you are done composing your set in VISUALZ. Push the play button, and then the fullscreen button. You're
+      doing it.
     </p>
   </div>
 </div>
