--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -1,73 +1,96 @@
-<div class="wrapper">
+<div class="wrapper pink">
     <div class="main">
         <h1>VISUALZ for DJs</h1>
-        <h2>Realtime audio-responsive visual composition software for DJs, VJs, Artists, and Venues.</h2>
+        <h2>Free realtime audio-responsive visual composition software for DJs, VJs, Artists, and Venues.</h2>
+        <a routerLink="/download">DOWNLOAD FREE</a>
     </div>
+    <div class='macwrap'>
+        <img src='../../assets/images/macbook.png' class='macbook' />
+    </div>
+    <div class="clearfix"></div>
 </div>
 
+<div class="content-wrapper youtube">
+    <iframe src="https://www.youtube.com/embed/ePmL8W_N1lA?rel=0&amp;controls=0" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
-<div class="content-wrapper">
-    <div class='macwrap' style="margin-top: -220px; position: relative;">
-        <img src='../../assets/images/macbook.png' class='macbook' />
+<header class="skew">
+    <h2>Features</h2>
+</header>
 
-    </div>
-    <div class='content-inner-wrapper'>
-
-        <h3 class="center">Features</h3>
-        <ul>
-            <li>Desktop app for Mac/Windows.</li>
-            <li>Audio-Responsive visuals.</li>
-            <li>Real-time beat/amplitude detection.</li>
-            <li>Compose visuals for your tracks and set.</li>
-            <li>Input via 1/8" Line In or Microphone.</li>
-            <li>Output via HDMI to projector, screen, or LED wall.</li>
-            <li>Convert your own art, graphics, images, and video into video sets.</li>
-            <li>Drag &amp; Drop images, videos, gifs, colors, webcam, text, and all other effects.</li>
-            <li>Realtime oscilloscope effect.</li>
-            <li>Various other effects...</li>
-            <li>Save individual tracks, and complete sets of multiple tracks.</li>
-            <li>Coming Soon: Change the color on your fan's phone at your set in sync with your visuals.</li>
-            <li>Coming Soon: Multiple remote cameras feature.</li>
-            <li>Coming Soon: Allow fans at your set to send live selfies directly to your visuals from their phones.
-            <li>Coming Soon: Built-in code editor for your own custom effects.
-            <li>Coming Soon: Rules to control when content plays during your track, eg. at loud or quiet points.
+<div class="content-wrapper dark">
+    <div class="content-inner-wrapper">
+        <ul class="big">
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Real-Time">sync</mat-icon>
+                <strong>Real-time</strong> beat/amplitude detection and <strong>audio-responsive</strong> visual
+                playback.
             </li>
-            <li>... Much more is in development. We've got ideas on ideas for the future.</li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Real-Time">view_module</mat-icon>
+                <strong>Quickly</strong> drag &amp; drop to <strong>compose</strong> visual sets of tracks with videos,
+                images, effects and more.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Mic">mic</mat-icon>
+                Use your built-in microphone or mic input.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Output">all_out</mat-icon>
+                Output to projector, tvs, LED screens, lighting hardware, mobile devices, and more.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="CrowdScreen">mobile_screen_share</mat-icon>
+                CrowdScreen feature integrates the flashlight and screen on your audience's mobile devices into your
+                set.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Laserz">flash_on</mat-icon>
+                Laserz feature integrates VISUALZ Laserz into your set.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="RemoteCam">linked_camera</mat-icon>
+                RemoteCam feature integrates crew cameramen and remote camera angles into your set.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="FanCam">camera_front</mat-icon>
+                FanCam feature allows members of the audience to interact by taking real-time selfies that are sent to
+                the visual composition.
+            </li>
         </ul>
     </div>
     <div class='clearfix'></div>
 </div>
 
+<!--
 <header>
     <button mat-button routerLink="/book"
         style="display:block; width: 200px; margin: 20px auto; color: #fff !important; font-size: 18px;">BOOK A
         DEMO</button>
 </header>
+-->
 
-<div class="content-wrapper dark">
-    <iframe src="https://www.youtube.com/embed/ePmL8W_N1lA?rel=0&amp;controls=0" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
 
-<header>
+<header class="skew">
     <h2>How It Works</h2>
 </header>
-<div class="content-wrapper">
+<div class="content-wrapper white">
     <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; max-width:300px; margin:0px auto;">
 </div>
 
-<header>
+<header class="skew">
     <h2>Artist Partners</h2>
 </header>
 <div class="content-wrapper dark">
-    <div class="main">
+    <div class="">
         <mat-card class="example-card">
             <mat-card-header>
                 <mat-card-title>Sam White</mat-card-title>
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
             <img mat-card-image src="https://i1.sndcdn.com/avatars-000334629285-bpkurv-t200x200.jpg" alt="Sam White">
-            <mat-card-content>
+            <!--<mat-card-content>
                 <p>
                     Burning Man, Electric Forest, and Bonnaroo.
                     Sam plays ita ll drawomg inspiration from the
@@ -76,7 +99,7 @@
                     and performing at clubs such as Virgin Hotel,
                     The Annex, The Empty Bottle, Debonair and more.
                 </p>
-            </mat-card-content>
+            </mat-card-content>-->
             <mat-card-actions>
                 <a href="https://samwhitemusic.com/" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
@@ -87,13 +110,13 @@
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
             <img mat-card-image src="../../assets/images/mckinzy.jpg" alt="Mikinzie Stuart">
-            <mat-card-content>
+            <!-- <mat-card-content>
                 <p>
                     Good vibes only from Desadeca. DJing clubs such as Beauty Bar she is tearing up this city. Keep
                     an eye
                     on this one.
                 </p>
-            </mat-card-content>
+            </mat-card-content> -->
             <mat-card-actions>
                 <a href="https://www.facebook.com/djdesadeca/" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
@@ -104,12 +127,12 @@
                 <mat-card-subtitle>DJ [Indiana]</mat-card-subtitle>
             </mat-card-header>
             <img mat-card-image src="../../assets/images/evan.jpg" alt="Slippin Jimmy">
-            <mat-card-content>
+            <!-- <mat-card-content>
                 <p>
                     Slippin Jimmy is a beast. Enough Said. Residencies all over Chicago and Indiana. Check him out
                     now.
                 </p>
-            </mat-card-content>
+            </mat-card-content> -->
             <mat-card-actions>
                 <a href="https://www.facebook.com/SlippinJimmysHouse/" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
@@ -120,21 +143,31 @@
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
             <img mat-card-image src="../../assets/images/mark.jpg" alt="Mark Wolff">
-            <mat-card-content>
+            <!-- <mat-card-content>
                 <p>
                     Mark Wolff can turn into an animal. The Whistler, Inn Joy, and Warehouse parties oh my. Mark
                     is a true to fashion House Music efficianado.
                 </p>
-            </mat-card-content>
+            </mat-card-content> -->
             <mat-card-actions>
                 <a href="https://soundcloud.com/markwolffmusic/" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
         </mat-card>
+        <mat-card class="example-card">
+            <mat-card-header>
+                <mat-card-title>Johnny Nonstop</mat-card-title>
+                <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image
+                src="https://scontent.find1-1.fna.fbcdn.net/v/t1.0-0/p552x414/12718189_1006056269481326_4952101631155024436_n.jpg?_nc_cat=105&_nc_oc=AQl9EpiaNWpK0z9T5IXTKKzmUzuXQ7IrXhmCPlZK0OCbEpcgkdfLZKDHOSRvGhQ0YqU&_nc_ht=scontent.find1-1.fna&oh=a9301ea82bdaff1d5e37a85eb6399cc0&oe=5DFF1144"
+                alt="Johnny Nonstop">
+
+            <mat-card-actions>
+                <a href="https://www.facebook.com/johnnynonstop/" target="_blank" mat-button>More Info</a>
+            </mat-card-actions>
+        </mat-card>
+        <div class="clearfix"></div>
     </div>
-
-
-
-
 </div>
 
 <!--
