--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
+$breakpoint-mobile: 768px;
+
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
     padding: 0px;
     background-color: #333;
     color: #333;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -16,12 +19,15 @@ h1 {
 h2 {
     margin-bottom: 30px;
     margin-top: 30px;
+    text-align: center;
+    text-transform: uppercase;
 } 
 
 h3 {
     margin-bottom: 20px;
     margin-top: 30px;
     text-align: left;
+    font-size: 40px;
 }
 
 p {
@@ -43,24 +49,79 @@ p {
 
 .wrapper {
     min-height: 500px;
-    background: url(assets/images/main.gif);
-    background-size: cover;
-    //height: 100%;
-    //width: 100%;
-    background-position: bottom center;
-    background-repeat: no-repeat;
-    text-shadow: 0px 2px 3px #000;
-    color: #fff;
+    //background: url(assets/images/main.gif);
+    //background-size: cover;
+    
+    //background-position: bottom center;
+    //background-repeat: no-repeat;
+    background:#fff;
+    //text-shadow: 0px 2px 3px #000;
+    color: #333;
     text-align: center;
     letter-spacing: 3px;
-    padding-top: 5%;
+    padding-top: 2%;
 
+    &.pink {
+        background-color: #e91e63;
+
+        a {
+            color: #fff;
+            font-size: 20px;
+            background: #333;
+            text-decoration: none;
+            padding: 10px;
+            margin-top: 10px;
+            float: left;
+
+        }
+    }
+    
+    .macwrap {
+        width: calc(60% - 40px);
+        float: left;
+
+        .macbook {
+            //width: 90%;
+            //margin: 0px auto;
+            //display: block;
+            float: left;
+
+            @media (max-width: $breakpoint-mobile) {
+                margin-top: 100px;
+                margin-left: -140px;
+            }
+        }
+    }
+    
     .main {
-        background: rgba(0, 0, 0, 0.5);
-        padding: 40px;
-        max-width: 600px;
-        margin: 0 auto;
+        //background: rgba(0, 0, 0, 0.5);
+        //padding: 40px;
+        //max-width: 600px;
+        //margin: 0 auto;
         //margin:100px auto 0px auto;
+        text-align: left;
+        padding: 0 20px;
+        width: 40%;
+        float: left;
+
+        h1 {
+            font-size: 100px;
+            margin: 40px 0 0 0px;
+
+            @media (max-width: $breakpoint-mobile) {
+                font-size: 60px;
+            }
+
+        }
+
+        h2 {
+            text-transform: none;
+            text-align: left;
+
+            @media (max-width: $breakpoint-mobile) {
+                font-size: 14px;
+            }
+        }
     }
 
     button {
@@ -81,47 +142,125 @@ p {
 }
 
 .content-wrapper {
-    padding: 40px;
-    background-color: #fff;
+    padding: 140px 40px 80px;
+    //background-color: #fff;
+
+    &.normal {
+        padding: 40px;
+
+        p {
+            color: #fff;
+        }
+                
+        h1 {
+            font-size: 30px;
+            margin-top: 40px;
+            margin-bottom: 40px;
+            line-height: 54px;
+            color: #fff;
+            text-transform: none;
+        }
+
+        h2 {
+            text-align: center;
+            color: #fff;
+            font-size: 20px;
+            margin-bottom: 40px;
+            margin-top: 40px;
+            text-transform: none;
+        }
+
+        h3 {
+            text-align: center;
+            color: #fff;
+            font-size: 16px;
+            margin-bottom: 40px;
+            margin-top: 40px;
+            text-transform: none;
+
+        }
+
+        
+
+    }
+
     color: #333;
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 1px;
 
-    .macwrap {
+    &.white {
+        background-color: #fff;
+    }
 
+    &.youtube {
+        padding: 0px;
+
+        iframe {
+            width: 100%;
+            height: 600px;
+            position: relative;
+            display: block;
+            margin: 0 auto;
+        }
     }
 
     .main {
         width: 300px;
         margin: 0px auto;
-
     }
 
+    ul.big {
+        padding: 0px;
+        margin: 0px; 
 
-
-    ul {
         li {
-            margin: 10px;
+            margin: 80px 40px;
+            font-size: 24px;
+            line-height: 40px;
+            display: block;
+            width: calc(50% - 80px);
+            float: left !important;
+            height: 300px;
+            text-align: center;
+
+            @media (max-width: $breakpoint-mobile) {
+                width: 100%;
+                height: auto;
+                margin: 80px 0px;
+            }
+
+            mat-icon {
+                display: block;
+                margin: 0px auto;
+                width: 100px;
+                height: 100px;
+                color: #e91e63;
+                font-size: 100px;
+                margin-bottom: 20px;
+            }
         }
     }
 
     &.dark {
         background-color: #333 !important;
-        
-        iframe {
-            width: 100%;
-            height: 500px;
-            position: relative;
-            display: block;
-            margin: 40px auto 20px;
-        }
+        color: #fff;        
     }
 
     mat-card {
-        //width: calc(33% - 50px);
+        width: calc(33% - 70px);
+
+        @media (max-width: $breakpoint-mobile) {
+            width: calc(100% - 70px);
+        }
+
+        //img { }
+
+        //width: 300px;
+        float: left;
         //margin: 10px;
-        margin-bottom: 20px;
+        margin: 0 20px 40px 20px;
+        //height: 500px;
 
         a {
             margin: 0px auto;
@@ -150,6 +289,8 @@ footer{
     font-size: 10px;
     line-height: 20px;
 
+    margin-top: -40px;
+    
     a {
         color: #fff;
         text-decoration: none;
@@ -163,8 +304,14 @@ header {
     background-color: #e91e63;
     padding: 20px;
 
+    &.skew {
+        transform: skewY(-2deg);
+        margin-top: -30px;
+        margin-bottom: -30px;
+    }
+
     a.logo {
-        color: #fff;
+        color: #333;
         text-decoration: none;
         text-transform: uppercase;
         font-size: 40px;
@@ -178,6 +325,10 @@ header {
     .nav {
         float: right;
 
+        @media (max-width: $breakpoint-mobile) {
+            display: none;
+        }
+
         div {
             //color: #cccccc;
             //font-size: 12px;
@@ -186,7 +337,7 @@ header {
 
         }
         a, button {
-            color: #fff;
+            color: #333;
             //display: inline-block;
             //text-decoration: none;
             //font-size: 14px;
@@ -197,7 +348,7 @@ header {
     }
 
     h2 {
-        color: #fff;
+        color: #333;
     }
 }
 
@@ -280,4 +431,18 @@ mat-basic-audio-player {
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.mat-card-header .mat-card-title {
+    white-space: nowrap;
+}
+
+.mat-card-image {
+    margin-bottom: -5px !important;
+}
+
+img {
+    &.rounded {
+        border-radius: 10px;
+    }
 }
