--- a/src/app/buy/buy.component.html
+++ b/src/app/buy/buy.component.html
@@ -16,7 +16,7 @@
         <ul class="features">
             <li>Watermark</li>
             <li>Desktop app for Mac/Windows</li>
-            <li>Audio-Responsive visuals</li>
+            <li>Audio-Reactive visuals</li>
             <li>Real-time beat detection</li>
             <li>Compose visuals for your tracks and set</li>
             <li>Line In / Mic</li>
@@ -42,7 +42,7 @@
             <li><strong>NO Watermark</strong></li>
             <li><strong>Version 1.0.* Users will be grandfathered in at the current price always.</strong></li>
             <li>Desktop app for Mac/Windows</li>
-            <li>Audio-Responsive visuals</li>
+            <li>Audio-Reactive visuals</li>
             <li>Real-Time beat detection</li>
             <li>Compose visuals for your tracks and set</li>
             <li>Line In / Mic</li>
@@ -101,7 +101,7 @@
                 we'll let you know when PRO is available.</li>
             <!--
             <li>Desktop app for Mac/Windows</li>
-            <li>Audio-Responsive visuals</li>
+            <li>Audio-Reactive visuals</li>
             <li>Real-time beat detection</li>
             <li>Compose visuals for your tracks and set</li>
             <li>Line In / Mic</li>
@@ -127,7 +127,7 @@
         <mat-card-content>
             <ul>
                 <li>Desktop app for Mac/Windows</li>
-                <li>Audio-Responsive visuals</li>
+                <li>Audio-Reactive visuals</li>
                 <li>Real-time beat detection</li>
                 <li>Compose visuals for your tracks and set</li>
                 <li>Line In / Mic</li>
