--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -10,19 +10,26 @@
         <h2>Crash Course:</h2>
 
         <p>
-            Welcome to VISUALZ. When you open the app it will create a track for you automatically. The left menu
-            toggles between the Track List, and options for Content you can add to a track.
+            Welcome to VISUALZ. When you open the app a new blank track will be created for you automatically. You can
+            toggle between the Track List and Content in the left sidebar.
         </p>
 
         <p>
-            Add some content by clicking the add content button to open the menu. Then click any of the options to add
-            content to the content slots.
+            Add some content by clicking the add content button to open the menu. Start by adding a Gif to your track.
+            Its easy, just click "Gif".
+        </p>
+
+        <p>
+            Great. Now that you have a gif in there you can see how easy it is to add more types of content to your
+            track. You can control content details and settings in the right sidebar. Just click the block you want to
+            edit.
         </p>
 
         <h2>Beat Visualizer</h2>
 
         <p>
-            The beat visualizer uses volume amplitude and peak detection to detect beats and changes in the music.
+            The beat visualizer is one of the main pieces of VISUALZ. It uses volume amplitude and peak detection to
+            detect beats and changes in the music.
         </p>
 
         <p>
@@ -32,7 +39,8 @@
         </p>
 
         <p>
-            Content can change on the beat, every other beat, the measure, or every other measure. This option is in the
+            By default content changes on the main screen every four beat changes (~every measure). The main screen can
+            change on the beat, every other beat, the measure, or every other measure. This option is in the
             Track Settings panel.
         </p>
 
