--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -1,7 +1,9 @@
 <div class="wrapper pink">
     <div class="main">
         <h1>VISUALZ for DJs</h1>
-        <h2>Free realtime audio-responsive visual composition software for DJs, VJs, Artists, and Venues.</h2>
+        <h2>
+            Free cutting edge realtime audio-reactive visual software for DJs, VJs, Artists, and Venues.
+        </h2>
         <a routerLink="/download">DOWNLOAD FREE</a>
     </div>
     <div class='macwrap'>
@@ -24,39 +26,50 @@
         <ul class="big">
             <li>
                 <mat-icon aria-hidden="false" aria-label="Real-Time">sync</mat-icon>
-                <strong>Real-time</strong> beat/amplitude detection and <strong>audio-responsive</strong> visual
+                <h1>Audio-Reactive</h1>
+                <strong>Real-time</strong> beat/amplitude detection and <strong>audio-reactive</strong> visual
                 playback.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Real-Time">view_module</mat-icon>
+                <h1>Create Video Fast</h1>
                 <strong>Quickly</strong> drag &amp; drop to <strong>compose</strong> visual sets of tracks with videos,
                 images, effects and more.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Mic">mic</mat-icon>
+                <h1>Easy Input</h1>
                 Use your built-in microphone or mic input.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Output">all_out</mat-icon>
+                <h1>Easy Output</h1>
                 Output to projector, tvs, LED screens, lighting hardware, mobile devices, and more.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="CrowdScreen">mobile_screen_share</mat-icon>
-                CrowdScreen feature integrates the flashlight and screen on your audience's mobile devices into your
-                set.
+                <h1>CrowdScreen</h1>
+                Mobile device control incorporates the flashlight and screen from your audience's mobile devices.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Laserz">flash_on</mat-icon>
+                <h1>Laserz</h1>
                 Laserz feature integrates VISUALZ Laserz into your set.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="RemoteCam">linked_camera</mat-icon>
-                RemoteCam feature integrates crew cameramen and remote camera angles into your set.
+                <h1>RemoteCam</h1>
+                Use mobile devices as remote cameras to achieve multiple video streams and angles.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="FanCam">camera_front</mat-icon>
-                FanCam feature allows members of the audience to interact by taking real-time selfies that are sent to
-                the visual composition.
+                <h1>FanCam</h1>
+                Audience selfies that are sent to the main screen in real time.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="FanCam">settings_remote</mat-icon>
+                <h1>Remote Control</h1>
+                Que tracks from your mobile device with the remote control. Its super jiffy.
             </li>
         </ul>
     </div>
