--- a/src/app/fan-screen/fan-screen.component.scss
+++ b/src/app/fan-screen/fan-screen.component.scss
@@ -1,6 +1,7 @@
 .crowd-preview {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
 }
 
 .cam {
@@ -15,12 +16,25 @@ canvas {
     position: absolute;
     top: 0px;
     z-index: 1;
+    width: 100vw;
+    height: 100vh;
 }
 
 .take-pic {
     position: fixed;
     bottom: 20px;
     left: calc(50% - 20px);
+    z-index: 2;
+}
+
+.grant-perms {
+    position: fixed;
+    bottom: 20px;
+    left: calc(50% - 100px);
+    width: 200px;
+    z-index: 2;
+    background-color: #fff;
+    color: #000;
 }
 
 .main-wrapper {
@@ -39,3 +53,4 @@ body, html {
     top: 30vh;
     width: 100%;
 }
+
