--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -25,16 +25,21 @@
     <div class="content-inner-wrapper">
         <ul class="big">
             <li>
-                <mat-icon aria-hidden="false" aria-label="Real-Time">sync</mat-icon>
+                <mat-icon aria-hidden="false" aria-label="Audio-Reactive">sync</mat-icon>
                 <h1>Audio-Reactive</h1>
                 <strong>Real-time</strong> beat/amplitude detection and <strong>audio-reactive</strong> visual
                 playback.
             </li>
             <li>
-                <mat-icon aria-hidden="false" aria-label="Real-Time">view_module</mat-icon>
+                <mat-icon aria-hidden="false" aria-label="Create Video Fast">view_module</mat-icon>
                 <h1>Create Video Fast</h1>
                 <strong>Quickly</strong> drag &amp; drop to <strong>compose</strong> visual sets of tracks with videos,
                 images, effects and more.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Gif Heaven">gif</mat-icon>
+                <h1>Gif Heaven</h1>
+                <strong>Giphy</strong> integration lets you have access to millions of Gifs for your set right now.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Mic">mic</mat-icon>
@@ -51,11 +56,6 @@
                 <h1>CrowdScreen</h1>
                 Mobile device control incorporates the flashlight and screen from your audience's mobile devices.
             </li>
-            <li>
-                <mat-icon aria-hidden="false" aria-label="Laserz">flash_on</mat-icon>
-                <h1>Laserz</h1>
-                Laserz feature integrates VISUALZ Laserz into your set.
-            </li>
             <!-- <li>
                 <mat-icon aria-hidden="false" aria-label="RemoteCam">linked_camera</mat-icon>
                 <h1>RemoteCam</h1>
@@ -64,12 +64,17 @@
             <li>
                 <mat-icon aria-hidden="false" aria-label="FanCam">camera_front</mat-icon>
                 <h1>FanCam</h1>
-                Audience selfies that are sent to the main screen in real time.
+                Audience selfies sent to the main screen in real time.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="FanCam">settings_remote</mat-icon>
                 <h1>Remote Control</h1>
                 Que tracks from your mobile device with the remote control. Its super jiffy.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Laserz">flash_on</mat-icon>
+                <h1>Laserz</h1>
+                Laserz feature integrates VISUALZ Laserz into your set.
             </li>
         </ul>
     </div>
