--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -9,9 +9,9 @@
     </p>
 
     <ul>
-      <li><a href="https://www.beeple-crap.com/vjloops">Beeple Crap</a></li>
-      <li><a href="https://docoptic.com/free/">DocOptic</a></li>
-      <li><a href="https://giphy.com/">Giphy</a></li>
+      <li><a href="https://www.beeple-crap.com/vjloops" target="_blank">Beeple Crap</a> - This guy is amazing. And puts
+        out videos for commercial and non-commercial use. His videos work great in VISUALZ!</li>
+      <li><a href="https://docoptic.com/free/" target="_blank">DocOptic</a></li>
     </ul>
 
     <h3>Giphy</h3>
@@ -35,7 +35,7 @@
     </ul>
 
     <p>
-      Other useful things you may or may not need:
+      Other useful things you may need:
     </p>
 
     <ul>
