componentize how to and add to home page

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -89,9 +89,15 @@
 </header>
 -->
 
-
 <header class="skew">
     <h2>How It Works</h2>
+</header>
+<div class="content-inner-wrapper">
+    <app-htw style="margin:120px auto; display: block;"></app-htw>
+</div>
+
+<header class="skew">
+    <h2>Setup</h2>
 </header>
 <div class="content-wrapper white">
     <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; max-width:300px; margin:0px auto;">
