--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -4,7 +4,7 @@
         <h2>
             Free cutting edge realtime audio-reactive visual software for DJs, VJs, Artists, and Venues.
         </h2>
-        <a routerLink="/download">DOWNLOAD FREE</a>
+        <a routerLink="/download" class="download">DOWNLOAD FREE</a>
     </div>
     <div class='macwrap'>
         <img src='../../assets/images/macbook.png' class='macbook' />
