download button mobile

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -89,10 +89,10 @@
 </header>
 -->
 
-<header class="skew">
+<header class="skew big-only">
     <h2>How It Works</h2>
 </header>
-<div class="content-inner-wrapper">
+<div class="content-inner-wrapper big-only">
     <app-htw style="margin:120px auto; display: block;"></app-htw>
 </div>
 
