--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -12,6 +12,7 @@
       <li><a href="https://www.beeple-crap.com/vjloops" target="_blank">Beeple Crap</a> - This guy is amazing. And puts
         out videos for commercial and non-commercial use. His videos work great in VISUALZ!</li>
       <li><a href="https://docoptic.com/free/" target="_blank">DocOptic</a></li>
+      <li><a href="https://www.shutterstock.com/video/search/dj-visuals" target="_blank-">ShutterStock</a></li>
     </ul>
 
     <h3>Giphy</h3>
