--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -18,7 +18,7 @@
 
     <div class="bordered">
         <p>
-            The Mac Version Is Coming Soon.
+            The Mac Version Is Coming Very Soon.
         </p>
         <img class="mac" src="../../assets/images/macos.png" />
 
