--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div class="content-wrapper normal">
     <h1>Privacy Policy</h1>
 
 
@@ -10,10 +10,7 @@
 
     <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use
         our
-        Service and the choices you have associated with that data. Our Privacy Policy for VISUALZstudio.com and VISUALZ
-        desktop application and Karl Steltenpohl is created with the help of the <a
-            href="https://www.freeprivacypolicy.com/free-privacy-policy-generator.php">Free Privacy Policy
-            Generator</a>.
+        Service and the choices you have associated with that data.
     </p>
 
     <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of
