--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div class="content-wrapper normal">
     <h1>Terms and Conditions for VISUALZ Desktop Application and VISUALZStudio.com</h1>
 
     <h2>Introduction</h2>
