--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,14 @@
 <div class="content-wrapper normal">
-    <h1 class="center">Download VISUALZ v1.2.0 for<br>Windows or Mac</h1>
+    <h1 class="center">Download VISUALZ v1.2.1 for<br>Mac or Windows</h1>
     <div class="clearfix"></div>
+
+    <div class="bordered">
+        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-1.2.1.dmg" target="_blank" mat-raised-button
+            (click)="downloadMac()" class="pink button">
+            Download For Mac
+        </a>
+        <img class="mac" src="../../assets/images/macos.png" />
+    </div>
 
     <div class="bordered">
         <a href="https://visualz-1.s3.us-east-2.amazonaws.com/VISUALZ-installer.rar" target="_blank" mat-raised-button
@@ -13,20 +21,6 @@
         <p>
             <a href="https://www.google.com/search?q=install+non+store+apps+windows+10&rlz=1C1CHBF_enUS840US840&oq=non-store+apps+win&aqs=chrome.2.69i57j69i60j0l4.8285j0j9&sourceid=chrome&ie=UTF-8"
                 target="_blank">Allow Non-Store Apps to Install on Windows 10</a>
-        </p>
-    </div>
-
-    <div class="bordered">
-        <p>
-            The Mac Version Is Coming Very Soon.
-        </p>
-        <img class="mac" src="../../assets/images/macos.png" />
-
-        <p>
-            <a href="https://www.google.com/search?q=allow+unsigned+apps+on+mac&rlz=1C1CHBF_enUS840US840&oq=allow+apps+on+mac&aqs=chrome.4.69i57j0l5.7806j0j4&sourceid=chrome&ie=UTF-8"
-                target="_blank">
-                Allowing
-                Third Party Applications to Install on a MacBook</a>
         </p>
     </div>
 </div>
