--- a/src/app/download/download.component.scss
+++ b/src/app/download/download.component.scss
@@ -23,13 +23,17 @@ a.button {
     border: 1px #999 dashed;
     border-radius: 3px;
     padding: 20px 20px 0px 20px;
+    margin: 0 20px;
     display: block;
-    width: 350px;
-    margin: 20px auto;
+    width: calc(50% - 85px);
+    
     text-align:center;
+    float: left;
 
     @media (max-width: $breakpoint-mobile) {
         width: calc(250px);
+        float: none;
+        margin: 20px auto;
     }
 
     color: #fff;
