--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -12,9 +12,61 @@
     <div class="clearfix"></div>
 </div>
 
+<!-- 
 <div class="content-wrapper youtube">
     <iframe src="https://www.youtube.com/embed/ePmL8W_N1lA?rel=0&amp;controls=0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div> -->
+
+<header class="skew">
+</header>
+
+<div class="content-wrapper dark">
+    <div class="content-inner-wrapper">
+        <div class="download-area">
+
+            <img src="../../assets/images/icon.ico" class="ico" />
+            
+            <div *ngIf="deviceInfo.os == 'Mac'" class="clearfix">
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-1.2.2.dmg" target="_blank" mat-raised-button
+                    (click)="downloadMac()" class="pink button">
+                    Download Free
+                </a>
+                <img class="mac" src="../../assets/images/macos.png" />
+            </div>
+
+            <div *ngIf="deviceInfo.os != 'Mac'" class="clearfix">
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/VISUALZ-installer.rar" target="_blank" mat-raised-button
+                    (click)="downloadWindows()" class="pink button">
+                    Download For Windows
+                </a>
+                <img class="windows" src="../../assets/images/windows.png" />
+            </div>
+
+        </div>
+        <div class="release-notes">
+            <h1>Visualz</h1>
+            <p>
+                Visualz brings real-time audio responsiveness and video composition into one place to create great visuals that go to your music's beat. Whether 
+                you are a dj newb or a pro create visuals easily. 
+            </p>
+
+            <h2>What's New in Version 1.2.2</h2>
+            <ul>
+                <li>Released 9/27/2019 version 1.2.2 is the first time Visualz has been available for Mac OSx. Yay!</li>
+                <li>Crowdscreen fan cam selfy feature is live.</li>
+                <li>Crowdscreen Link changed to just Crowdscreen.</li>
+                <li>Updates to remote control.</li>
+                <li>Gif optimizations.</li>
+                <li>Beat detection threshold changes.</li>
+            </ul>
+
+            <h2>Bug Fixes</h2>
+            <ul>
+                <li>SMS number correction.</li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 <header class="skew">
