--- a/src/styles.scss
+++ b/src/styles.scss
@@ -142,7 +142,7 @@ p {
 }
 
 .content-wrapper {
-    padding: 140px 40px 80px;
+    padding: 100px 40px 80px;
     overflow-x: hidden;
     //background-color: #fff;
 
@@ -460,4 +460,66 @@ img {
     @media (max-width: $breakpoint-mobile) {
         display: none;
     }
+}
+
+.download-area {
+    float: left;
+    width: calc(50% - 40px);
+    padding-right: 40px;
+
+    a {
+        font-size: 12px;
+        clear: both;
+        float: right;
+    }
+
+    .ico {
+        width: 140px;
+        overflow: hidden;
+        border-radius: 10px;
+        margin: 20px 0px 25px;
+        float: right;
+    }
+
+    img {
+        float: right;
+        clear: both;
+    }
+}
+
+.release-notes {
+    float: left;
+    width: calc(50%);
+
+    h1 {
+        font-size: 40px;
+        text-align: left;
+    }
+
+    h2 {
+        font-size: 16px;
+        text-align: left;
+        color: rgb(202, 202, 202);
+        margin-bottom: 0px;
+    }
+
+    ul {
+        margin: 20px 0 20px -25px;
+    }
+}
+
+.windows {
+    height: 80px;
+    display: block;
+    margin: 25px auto;
+
+    @media (max-width: $breakpoint-mobile) {
+        height: calc(60px);
+    }
+}
+
+.mac {
+    height: 80px;
+    display: block;
+    margin: 25px auto;
 }
