--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -95,7 +95,7 @@
         </p>
 
         <p>
-            <strong>CrowdScreen Link</strong> - The CrowdScreen link block displays the number people have to text to
+            <strong>CrowdScreen</strong> - The CrowdScreen link block displays the number people have to text to
             receive the link that connects them to your VISUALZ composition.
         </p>
 
